--- a/views/partials/admin-sidebar.ejs
+++ b/views/partials/admin-sidebar.ejs
@@ -58,6 +58,18 @@
           <span class="text" style="color: #000">Users</span>
         </a>
       </li>
+      <li class="menu-item has-submenu">
+        <a class="" href="/admin/coupons">
+          <i class="icon material-icons md-person"></i>
+          <span class="text" style="color: #000">Coupons</span>
+        </a>
+      </li>
+      <li class="menu-item has-submenu">
+        <a class="" href="/admin/add_coupons">
+          <i class="icon material-icons md-person"></i>
+          <span class="text" style="color: #000">AddCoupons</span>
+        </a>
+      </li>
       <!-- <li class="menu-item has-submenu">
         <a class="" href="page-transactions-1.html">
           <i class="icon material-icons md-monetization_on"></i>
