--- a/views/user/filter-by-category.ejs
+++ b/views/user/filter-by-category.ejs
@@ -128,7 +128,7 @@
 
 
 <div class="widget-category mb-30">
-                            <h5 class="section-title style-1 mb-30 wow fadeIn animated">Filter By Category</h5>
+                            <h5 class="section-title style-1 mb-30 wow fadeIn animated">Shop By Category</h5>
                             
 
                             <ul class="categories">
