--- a/views/user/proceedtocheckout.ejs
+++ b/views/user/proceedtocheckout.ejs
@@ -78,7 +78,7 @@
                                     <tr>
 
 
-<td class="image product-thumbnail"><img src="/uploads/<%=cartItems.cartItems.Image %>" alt="#"></td>
+<td > <img src="/uploads/<%= cartItems.cartItems.Image[0] %>" ></td>
                                         <td>
                                             <h5><a href="shop-product-full.html"><%=cartItems.cartItems.Productname%></a></h5> <span class="product-qty"></span>
                                         </td>
