--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -625,7 +625,7 @@
                         <div class="product-img-action-wrap">
                             <div class="product-img product-img-zoom">
                                 <a href="/product_details/<%= homeList._id%>">
-                                    <img class="default-img" src="/uploads/<%= homeList.Image %>" alt="">
+                                    <img class="default-img" src="/uploads/<%= homeList.Image[0] %>" alt="">
                                     <!-- <img class="hover-img" src="assets/imgs/shop/product-7-1.jpg" alt=""> -->
                                 </a>
                             </div>
