--- a/views/user/view-cart.ejs
+++ b/views/user/view-cart.ejs
@@ -27,7 +27,7 @@
                                     <tr>
                                     
                                        
-                                        <td > <img src="/uploads/<%=cartItems.cartItems.Image %>" ></td>
+                                        <td > <img src="/uploads/<%=cartItems.cartItems.Image[0] %>" ></td>
                                         <td class="product-des product-name">
                                             <h5 class="product-name"><a href="shop-product-right.html"><%=cartItems.cartItems.Productname%></a></h5>
                                             <p class="font-xs"><%=cartItems.cartItems.category%></p> 
