--- a/views/partials/admin-sidebar.ejs
+++ b/views/partials/admin-sidebar.ejs
@@ -15,59 +15,75 @@
   </div>
   <nav>
     <ul class="menu-aside">
-      <li class="menu-item active">
+      <!-- <li class="menu-item active">
         <a class="" href="/">
           <i class="icon material-icons md-home"></i>
           <span class="text" style="color: #000">Dashboard</span>
         </a>
-      </li>
-      <li class="menu-item has-submenu">
+      </li> -->
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin"> <i class="icon material-icons md-home"></i>
+            <span class="text">Dashboard</span>
+        </a>
+    </li>
+    <li class="menu-item ">
+      <a class="menu-link" href="/admin/view_product"> <i class="icon material-icons md-shopping_bag"></i>
+          <span class="text">Products</span>
+      </a>
+  </li>
+  <li class="menu-item ">
+    <a class="menu-link" href="/admin/add_category"> <i class="icon material-icons md-store"></i>
+        <span class="text">Categories</span>
+    </a>
+</li>
+
+      <!-- <li class="menu-item has-submenu">
         <a class="" href="/admin/view_product">
-          <i class="icon material-icons md-shopping_bag"></i>
+          <i class="icon material-icons md-store"></i>
           <span class="text" style="color: #000">Products</span>
         </a>
-      </li>
-      <li class="menu-item has-submenu">
+      </li> -->
+      <!-- <li class="menu-item has-submenu">
         <a class="" href="/admin/add_category">
           <i class="icon material-icons md-store"></i>
           <span class="text" style="color: #000">Categories</span>
         </a>
-      </li>
+      </li> -->
       <!-- <li class="menu-item has-submenu">
         <a class="" href="/admin/add_sub">
           <i class="icon material-icons md-store"></i>
           <span class="text" style="color: #000">Sub Categories</span>
         </a>
       </li> -->
-      <li class="menu-item has-submenu">
-        <a class="" href="/admin/orders">
+      <li class="menu-item">
+        <a class="menu-link" href="/admin/orders">
           <i class="icon material-icons md-shopping_cart"></i>
-          <span class="text" style="color: #000">Orders</span>
+          <span class="text" >Orders</span>
         </a>
       </li>
 
-      <li class="menu-item has-submenu">
-        <a class="" href="/admin/add_product">
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin/add_product">
           <i class="icon material-icons md-add_box"></i>
-          <span class="text" style="color: #000">Add Product</span>
+          <span class="text" >Add Product</span>
         </a>
       </li>
-      <li class="menu-item has-submenu">
-        <a class="" href="/admin/view_users">
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin/view_users">
           <i class="icon material-icons md-person"></i>
-          <span class="text" style="color: #000">Users</span>
+          <span class="text" >Users</span>
         </a>
       </li>
-      <li class="menu-item has-submenu">
-        <a class="" href="/admin/coupons">
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin/coupons">
           <i class="icon material-icons md-person"></i>
-          <span class="text" style="color: #000">Coupons</span>
+          <span class="text" >Coupons</span>
         </a>
       </li>
-      <li class="menu-item has-submenu">
-        <a class="" href="/admin/add_coupons">
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin/add_coupons">
           <i class="icon material-icons md-person"></i>
-          <span class="text" style="color: #000">AddCoupons</span>
+          <span class="text" >AddCoupons</span>
         </a>
       </li>
       <!-- <li class="menu-item has-submenu">
