--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -19,10 +19,10 @@
 
 
 
-                  <input type="radio" id="address1" name="address" value="address1" style="height: 10px;width:10px;">
+                  <input type="radio" id="address1" name="address" value="<%=response.item._id%>" style="height: 10px;width:10px;">
 
                   <h4>
-                    <%=response.item.fname%>:<%=response.item.lname%>
+                    <%=response.item.fname%> <%=response.item.lname%>
                   </h4>
                   <h5>
                     <%=response.item.street%>
