--- a/views/user/proceedtocheckout.ejs
+++ b/views/user/proceedtocheckout.ejs
@@ -78,9 +78,9 @@
                                     <tr>
 
 
-<td > <img src="/uploads/<%= cartItems.cartItems.Image[0] %>" ></td>
+                                        <td > <img src="/uploads/<%= cartItems.cartItems %>" ></td>
                                         <td>
-                                            <h5><a href="shop-product-full.html"><%=cartItems.cartItems.Productname%></a></h5> <span class="product-qty"></span>
+                                            <h5><a href=""><%=cartItems.cartItems.Productname%></a></h5> <span class="product-qty"></span>
                                         </td>
                                         <td><%=cartItems.cartItems.Price%></td>
                                     </tr>
