--- a/views/partials/admin-sidebar.ejs
+++ b/views/partials/admin-sidebar.ejs
@@ -56,7 +56,7 @@
         </a>
       </li> -->
       <li class="menu-item">
-        <a class="menu-link" href="/admin/orders">
+        <a class="menu-link" href="/admin/orders_list">
           <i class="icon material-icons md-shopping_cart"></i>
           <span class="text" >Orders</span>
         </a>
