--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -11,9 +11,13 @@
           enctype="multipart/form-data"
         >
           <label for="">Prodcut Name</label>
-          <input type="text" name="name" class="form-control" />
+          <input type="text" name="name" id="name" class="form-control" onkeyup="validateName()"  />
+          <span id="name-error" class="validation-label"></span>
+<br>
           <label for="">Description</label>
-          <input type="text" name="description" class="form-control" />
+          <input type="text" name="description" id="discription" class="form-control" onkeyup="validateDiscription()"/>
+          <span id="discription-error" class="validation-label"></span>
+<br>
 
           <label for="">Price</label>
           <input type="text" name="price" class="form-control" />
@@ -39,7 +43,7 @@
           </select>
           
           <label for="">Quantity</label>
-          <input type="text" name="quantity" class="form-control" />
+          <input type="text" name="quantity" value="1" class="form-control" />
 
           <label for="">Image</label>
           <input type="file" name="file"  class="form-control" multiple accept="file/*"/>
@@ -52,3 +56,57 @@
   <script defer src="https://cdn.crop.guide/loader/l.js?c=123ABC">
   </script>
 </section>
+<script>
+let nameError = document.getElementById("name-error");
+let discritionError = document.getElementById("discription-error");
+
+const regex = /^[^ ].*/
+function validateName() {
+  console.log("lllll");
+  var name = document.getElementById("name").value;
+  var nameInput = document.getElementById("name");
+console.log(name);
+  if (name.length == 0) {
+    nameError.innerHTML = "Name is required";
+    nameError.style.color = "red";
+    nameInput.style.border = "solid 2px red";
+    return false;
+  } if (!name.match(regex)) {
+    nameError.innerHTML = "Write valid name";
+    nameError.style.color = "red";
+    nameInput.style.border = "solid 2px red";
+
+    return false;
+  }
+  nameError.innerHTML = "";
+  // nameError.innerHTML = "Valid Name";
+  nameError.style.color = "green";
+  nameInput.style.border = "solid 2px green";
+
+  return true;
+}
+function validateDiscription() {
+  console.log("lllll");
+  var name = document.getElementById("discription").value;
+  var nameInput = document.getElementById("discription");
+console.log(name);
+  if (name.length == 0) {
+    discritionError.innerHTML = "Discription is required";
+    discritionError.style.color = "red";
+    nameInput.style.border = "solid 2px red";
+    return false;
+  } if (!name.match(regex)) {
+    discritionError.innerHTML = "Write valid discription";
+    discritionError.style.color = "red";
+    nameInput.style.border = "solid 2px red";
+
+    return false;
+  }
+  discritionError.innerHTML = "";
+  // nameError.innerHTML = "Valid Name";
+  discritionError.style.color = "green";
+  nameInput.style.border = "solid 2px green";
+
+  return true;
+}
+</script>
