--- a/views/partials/admin-sidebar.ejs
+++ b/views/partials/admin-sidebar.ejs
@@ -61,7 +61,12 @@
           <span class="text" >Orders</span>
         </a>
       </li>
-
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin/sales_report">
+          <i class="icon material-icons md-add_box"></i>
+          <span class="text" >Sales Report</span>
+        </a>
+      </li>
       <li class="menu-item ">
         <a class="menu-link" href="/admin/add_product">
           <i class="icon material-icons md-add_box"></i>
