--- a/views/admin/add-category.ejs
+++ b/views/admin/add-category.ejs
@@ -16,7 +16,7 @@
           
         >
           <label for="">Category Name</label>
-          <input type="text" name="categoryname" id="name" class="form-control" onkeyup="validateName()"/>
+          <input type="text" name="categoryname" id="name" class="form-control" required="" onkeyup="validateName()"/>
           <span id="name-error" class="validation-label"></span>
 <br>
           <button type="submit" class="btn btn-success mt-4">Submit</button>
