--- a/views/admin/admin-dashboard.ejs
+++ b/views/admin/admin-dashboard.ejs
@@ -130,8 +130,8 @@
           {
             fill: true,
             lineTension: 0,
-            backgroundColor: "#007BFF",
-            borderColor: "#000",
+            backgroundColor: "#17A2B8",
+            borderColor: "#0056B3",
             data: buyed,
             label: "Sales",
           },
@@ -156,8 +156,8 @@
        yValue.push(paymentData[1])
          
   var barColors = [
-    "#007BFF",
-    "#28A745",
+    "#17A2B8",
+    "#FFC107",
     "#2b5797",
     "#e8c3b9",
     "#1e7145"
