--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -34,6 +34,11 @@
                   >
                     Expiry
                   </th>
+                  <th
+                  class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
+                >
+                  Option
+                </th>
                 </tr>
               </thead>
               <tbody>
