--- a/views/partials/admin-sidebar.ejs
+++ b/views/partials/admin-sidebar.ejs
@@ -63,7 +63,7 @@
       </li>
       <li class="menu-item ">
         <a class="menu-link" href="/admin/sales_report">
-          <i class="icon material-icons md-add_box"></i>
+          <i class="icon material-icons md-insert_chart_outlined"></i>
           <span class="text" >Sales Report</span>
         </a>
       </li>
@@ -81,7 +81,7 @@
       </li>
       <li class="menu-item ">
         <a class="menu-link" href="/admin/coupons">
-          <i class="icon material-icons md-person"></i>
+          <i class="icon material-icons md-credit_card"></i>
           <span class="text" >Coupons</span>
         </a>
       </li>
@@ -91,6 +91,19 @@
           <span class="text" >AddCoupons</span>
         </a>
       </li>
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin/list_banner">
+          <i class="icon material-icons md-add_box"></i>
+          <span class="text" >Banner</span>
+        </a>
+      </li>
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin/add_pbanner">
+          <i class="icon material-icons md-add_circle_outline"></i>
+          <span class="text" >Add Banner</span>
+        </a>
+      </li>
+   
       <!-- <li class="menu-item has-submenu">
         <a class="" href="page-transactions-1.html">
           <i class="icon material-icons md-monetization_on"></i>
