--- a/views/user/filter-by-category.ejs
+++ b/views/user/filter-by-category.ejs
@@ -166,7 +166,9 @@
 
   <%}else{%>
     
-  <h2><%=locals.err%></h2>
+    <div class="d-flex justify-content-center">
+      <img src="/assets/imgs/banner/no-product-found.png" alt="" />
+    </div>
   <%} %>
 </main>
 
