--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -571,10 +571,10 @@
                 aria-controls="tab-one"
                 aria-selected="true"
               >
-                Featured
+                Popular
               </button>
             </li>
-            <li class="nav-item" role="presentation">
+            <!-- <li class="nav-item" role="presentation">
               <button
                 class="nav-link"
                 id="nav-tab-two"
@@ -601,7 +601,7 @@
               >
                 New added
               </button>
-            </li>
+            </li> -->
           </ul>
           <a href="#" class="view-more d-none d-md-flex"
             >View More<i class="fi-rs-angle-double-small-right"></i
