--- a/views/user/view-cart.ejs
+++ b/views/user/view-cart.ejs
@@ -9,6 +9,11 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="table-responsive">
+                          <% if(cartItems.length==0){%>
+                            <div class="d-flex justify-content-center">
+                              <img src="/assets/imgs/banner/external-empty-cart-web-store-flaticons-lineal-color-flat-icons.png" alt="" />
+                            </div>
+                            <%} else{%>
                             <table class="table shopping-summery text-center clean">
                                 <thead>
                                     <tr class="main-heading">
@@ -120,6 +125,7 @@
                                 </div>
                             </div>
                         </div>
+                        <%} %>
                     </div>
                 </div>
             </div>
