--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -4,6 +4,11 @@
       <div class="row">
         <div class="col-12">
           <div class="table-responsive">
+            <% if(locals.wishCount==0){%>
+              <div class="d-flex justify-content-center">
+                <img src="/assets/imgs/banner/empty-box.png" alt="" />
+              </div>
+              <%} else{%>
             <table class="table shopping-summery text-center">
               <thead>
                 <tr class="main-heading">
@@ -36,7 +41,13 @@
                   <td class="text-right" data-title="Cart">
                     <button
                       class="btn btn-sm"
-                      onclick="addtocart('<%=wishlistItems.item%>')"
+                      onclick="addtocart('<%=wishlistItems.item%>');Swal.fire({
+                        position: 'center',
+                        icon: 'success',
+                        title: 'Product is successfully added to cart',
+                        showConfirmButton: false,
+                        timer: 1500
+                      })"
                     >
                       <i class="fi-rs-shopping-bag mr-5"></i>Add to cart
                     </button>
@@ -53,6 +64,7 @@
                 </tr>
                 <%}) %>
               </tbody>
+              <%} %>
             </table>
           </div>
         </div>
@@ -62,14 +74,17 @@
 </main>
 <script>
   function addtocart(proId) {
+    console.log(proId);
+
     $.ajax({
-      url: "/add-to-cart/" + proId,
+      url: "/add_to_cart/" + proId,
       method: "get",
       success: (response) => {
         if (response.status) {
           let count = $("#cart-count").html();
           count = parseInt(count) + 1;
-          $("cart-count").html(count);
+          console.log(count);
+          $("#cart-count").html(count);
         }
       },
     });
