--- a/views/partials/admin-sidebar.ejs
+++ b/views/partials/admin-sidebar.ejs
@@ -98,7 +98,7 @@
         </a>
       </li>
       <li class="menu-item ">
-        <a class="menu-link" href="/admin/add_pbanner">
+        <a class="menu-link" href="/admin/add_banner">
           <i class="icon material-icons md-add_circle_outline"></i>
           <span class="text" >Add Banner</span>
         </a>
