--- a/views/user/order-details.ejs
+++ b/views/user/order-details.ejs
@@ -9,7 +9,8 @@
               
               <h5 class="text-muted mb-0">Thanks for your Order, <span style="color: black;"><%=orderDetails.name%></span>!</h5>
             </div>
-            <p style="display: none;" id="invoicedata;"><%= JSON.stringify(locals.data) %></p>
+            <p style="display: none;" id="lapzcart;" ><%= JSON.stringify(locals.data) %></p>
+            <input type="hidden" id ="ssss"value="<%= JSON.stringify(locals.data) %>">
   
                 <%if(orderDetails. orderStatus=='Delivered'){%>
 
@@ -168,8 +169,11 @@
     }
     function invoiceCreator() {
     //Import the library into your project
-    let data = JSON.parse(document.getElementById('invoicedata').innerHTML);
+    let data = JSON.parse(document.getElementById('ssss').value);
     console.log(data);
+
+    // let data = JSON.parse(document.getElementById('lapzcart').innerHTML);
+    // console.log(data);
 
      
 
